# Shinsekai

./: .coveragerc  .env.local.example  .gitignore  CONTRIBUTING.md  EasyAIDesktopAssistant.lnk  LICENSE  README.md  VERSION  action_animeV2.py  args.py  design.md  docker-compose.funasr.yml  environment.yml  frontend_bridge.py  generate_voice_lines.py  install-linux.sh  install.bat  install.command  main.bat  main.py  main_sprite.py  main_sprite_test.spec  pytest.ini  requirements-dev.txt  requirements-runtime-core.txt  requirements-runtime-local-ai.txt  requirements-runtime-media.txt  requirements.txt  run_webui_eaiv.ps1  start-linux.sh  start-react.bat  start-react.command  start-react.sh  start-tauri.bat  start.bat  start.command  start_old.bat  webui.bat  webui.py  webui_qt.py  (+1 more)
.claude/: settings.json
.githooks/: commit-msg  pre-push
ai/: __init__.py
asr/: asr_adapter.py  asr_manager.py  asr_test.py  streaming_controller.py
character_utils/: file_util.py
config/: adapter_extra_kwargs.py  background_manager.py  character_config.py  character_manager.py  config_manager.py  mirror_env.py  network_proxy.py  schema.py  sprite_voice.py  tts_provider_config.py
core/: __init__.py  app_runtime.py  dialog_tokens.py  handler_registry.py  message.py  message_handler.py  paths.py  plugin_host.py  stream_parser.py  tts_message_handler.py  ui_message_handler.py  ui_update_manager.py  workers.py
docs/: ANIMATED_SPRITES.md  CHAT_UI_THEME_GUIDE_zh-CN.md  FUNASR_LOCAL_DEV.md  GENERAL_TEST_PLAN_zh-CN.md  GUI_USER_GUIDE_zh-CN.md  PLUGIN_DEVELOPER_GUIDE.md  PROJECT_STRUCTURE.md  README_EN.md  RELEASE_PROCESS_zh-CN.md  index.html  non_ui_revert_log_2026-05-25.md  (+4 more)
frontend/src-tauri/: Cargo.toml  runtime_manifest.json  runtime_sources.json  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: desktop_files.rs  lib.rs  main.rs  project_root.rs  runtime.rs
frontend/src-tauri/src/runtime/: managed.rs  manifest.rs  python_env.rs  python_probe.rs  resolver.rs
frontend/src-tauri/src/runtime/managed/: tests.rs
frontend/src-tauri/src/runtime/manifest/: tests.rs
frontend/src-tauri/src/runtime/python_probe/: tests.rs
frontend/src-tauri/src/runtime/resolver/: tests.rs
frontend/src-tauri/windows/: installer.nsi
(+1049 files in other folders)
