[package]
name = "shinsekai-desktop"
version = "0.1.0"
description = "Shinsekai desktop shell"
authors = ["Shinsekai Contributors"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/RachelForster/Shinsekai"

[lib]
name = "shinsekai_desktop"
path = "src/lib.rs"

[[bin]]
name = "shinsekai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
flate2 = "1.1.9"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tar = "0.4.45"
tauri = { version = "2.11.2", features = [] }
zip = "5.0.0"
