[package]
name = "shinsekai-desktop"
version = "2.3.0"
description = "Shinsekai desktop shell"
authors = ["Shinsekai Contributors"]
edition = "2021"
license-file = "../../LICENSE"
repository = "https://github.com/RachelForster/Shinsekai"

[lib]
name = "shinsekai_desktop"
path = "src/lib.rs"

[[bin]]
name = "shinsekai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
flate2 = "1.1.9"
getrandom = "0.3.4"
libc = "0.2.178"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tar = "0.4.45"
tauri = { version = "2.11.2", features = ["macos-private-api"] }
tauri-runtime = "2.11.2"
zip = "5.0.0"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"
